--- a/action.yml
+++ b/action.yml
@@ -89,6 +89,10 @@ inputs:
   secretEncodingType:
     description: 'The encoding type of the secret to decode. If not specified, the secret will not be decoded. Supported values: base64, hex, utf8'
     required: false
+  revokeToken:
+    description: 'When set to true, automatically revokes the vault token after the run is complete.'
+    default: "false"
+    required: false
   ignoreNotFound:
     description: 'Whether or not the action should exit successfully if some requested secrets were not found.'
     required: false
@@ -96,6 +100,7 @@ inputs:
 runs:
   using: 'node20'
   main: 'dist/index.js'
+  post: 'dist/revoke/index.js'
 branding:
   icon: 'unlock'
   color: 'gray-dark'
